--- a/1/Solution/packages/repositories.config
+++ b/1/Solution/packages/repositories.config
@@ -10,4 +10,6 @@
   <repository path="..\..\EomTool\EomTool.Domain\packages.config" />
   <repository path="..\..\EomTool\EomToolWeb.Tests\packages.config" />
   <repository path="..\..\EomTool\EomToolWeb\packages.config" />
+  <repository path="..\..\QuickBooks.Test\packages.config" />
+  <repository path="..\..\QuickBooks\packages.config" />
 </repositories>
