tree wiz pixel and ssn require logic

--- a/2/LendingTree/LTWeb/Web.config
+++ b/2/LendingTree/LTWeb/Web.config
@@ -23,6 +23,7 @@
     <add key="StatesExcludedFromDisclosure" value="AK,AR,CT,DC,GA,HI,MI,NE,NH,NM,OK,OR,SD,TN,UT,WV" />
     <add key="Mode_SsnRequired" value="2" />
     <add key="Mode_SsnNotRequired" value="1" />
+    <add key="Mode_SsnDefault" value="2" />
     <!-- End LTWeb -->
   </appSettings>
   <system.web>
