--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -68,7 +68,11 @@
       <DependentUpon>Cake.tt</DependentUpon>
     </Compile>
     <Compile Include="Contexts\CakeOffer.partial.cs" />
+    <Compile Include="Contexts\DailySummary.cs">
+      <DependentUpon>Cake.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contracts\IOffer.cs" />
+    <Compile Include="DTOs\OfferInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Contracts\IOfferRepository.cs" />
     <Compile Include="Services\OfferRepository.cs" />
