--- a/3/ClientPortal.Web/ClientPortal.Web/Web.Debug.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.Debug.config
@@ -7,13 +7,16 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an atrribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+      -->
+  <connectionStrings>
+    <add name="CakeContext"
+         connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="CakeContext"
+         connectionString="data source=biz2\da;initial catalog=Cake;integrated security=True"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
