--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -190,6 +190,7 @@
     <Content Include="Content\images\foundation\orbit\right-arrow.png" />
     <Content Include="Content\images\foundation\orbit\rotator-black.png" />
     <Content Include="Content\images\foundation\orbit\timer-black.png" />
+    <Content Include="Content\index.css" />
     <Content Include="Content\kendo\2012.3.1114\Black\editor.png" />
     <Content Include="Content\kendo\2012.3.1114\Black\imagebrowser.png" />
     <Content Include="Content\kendo\2012.3.1114\Black\loading-image.gif" />
@@ -832,6 +833,9 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\_Portal.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_HelloPartial.cshtml" />
+    <Content Include="Views\Home\_OfferSummaryPartial.cshtml" />
+    <Content Include="Views\Home\_DailySummaryPartial.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
