--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -78,7 +78,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true">
-    <paymentBatches canHold="DIRECTAGENTS\jboaz" />
+  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="false">
+    <paymentBatches canHold="DIRECTAGENTS\jboaz" numAccountingPeriods="5" />
   </eomToolWeb>
 </configuration>
