--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -86,8 +86,8 @@
     <Compile Include="DTOs\DailyInfo.cs" />
     <Compile Include="DTOs\OfferInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Contracts\IOfferRepository.cs" />
-    <Compile Include="Services\OfferRepository.cs" />
+    <Compile Include="Contracts\ICakeRepository.cs" />
+    <Compile Include="Services\CakeRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
