quick books web connector, getting closer to some that we can use

--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -3,6 +3,8 @@
   <repository path="..\..\ClientPortal.Data\packages.config" />
   <repository path="..\..\ClientPortal.Entities\packages.config" />
   <repository path="..\..\DirectAgents.Mvc\packages.config" />
+  <repository path="..\..\QuickBooks.WebConnector\packages.config" />
+  <repository path="..\..\QuickBooks\packages.config" />
   <repository path="..\ClientPortal.Web.Tests\packages.config" />
   <repository path="..\ClientPortal.Web\packages.config" />
 </repositories>
