Dashboard Performance chart

--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -882,6 +882,7 @@
     <Content Include="Views\Home\Dashboard.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\GoalTypeEnum.cshtml" />
     <Content Include="Views\Invoices\Index.cshtml" />
+    <Content Include="Views\Home\PerformanceVis.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
