--- a/2/LendingTree/LTWeb.Common/App.config
+++ b/2/LendingTree/LTWeb.Common/App.config
@@ -4,7 +4,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings configSource="connectionsconfig.xml"></connectionStrings>
+  <connectionStrings>
+    <add name="LTWebDataContext" connectionString="data source=.;initial catalog=LTWeb;User=sa;Password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
