--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -886,6 +886,7 @@
     <Content Include="Views\Shared\_HeatMap.cshtml" />
     <Content Include="Views\Home\ProjectionVis.cshtml" />
     <Content Include="Views\Goals\_Infrastructure.cshtml" />
+    <Content Include="Views\Home\OfferGoalsRow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
