--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -885,6 +885,7 @@
     <Content Include="Views\Home\SpendVis.cshtml" />
     <Content Include="Views\Shared\_HeatMap.cshtml" />
     <Content Include="Views\Home\ProjectionVis.cshtml" />
+    <Content Include="Views\Reports\_AffiliateReportPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
