--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="Context" connectionString="data source=.;initial catalog=CakeExtract;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="CakeExtracterContext" connectionString="data source=.;initial catalog=CakeExtract;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
