--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -1,8 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=169433
-  -->
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -10,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="CakeContext" connectionString="metadata=res://*/Contexts.Cake.csdl|res://*/Contexts.Cake.ssdl|res://*/Contexts.Cake.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz2\da;initial catalog=Cake;User Id=sa;Password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="data source=biz2\da;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=.;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
     <add name="CakeExtracterContext" connectionString="data source=biz2\da;initial catalog=CakeExtract;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
