--- a/3/CakeExtracter/CakeExtracter/App.config
+++ b/3/CakeExtracter/CakeExtracter/App.config
@@ -5,8 +5,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CakeExtracterContext" connectionString="data source=.;initial catalog=CakeExtract;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=.;initial catalog=ClientPortal;User Id=sa;Password=sp0ngbOb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="UseCache" value="true" />
+    <add key="CacheDirectory" value="C:\CakeCache\" />
+    <add key="CakeApiKey" value="FCjdYAcwQE" />
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
